[tool.poetry]
name = "topicos"
version = "0.1.0"
description = ""
authors = ["arturj <arturjardel9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
